completed the css finally. added in the variables to the js, tried out the eventListener
completed the css finally. added in the variables to the js, tried out the eventListener

--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DocumentType html>
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
-        <title> ROCK PAPER SCISSORS SHOOT!</title>
+        <title> Rock Paper Scissors Shoot!</title>
         <link rel = "stylesheet" href="styles.css">
+
     </head>
     
     <body>
         <header>
             <h1>
-               ROCK PAPER SCISSORS SHOOT!
+               Rock Paper Scissors Shoot!
             </h1>
         </header>
 
         <div class = "score-board">
             <div id="user-label" class="badge"> user </div> 
             <div id="computer-label" class="badge"> computer </div> 
-            <span id="user-score"> 0 </span>
+            <span id="user-score"> 0 </span>:
             <span id="computer-score"> 0 </span>
         </div>
 
@@ -40,5 +42,10 @@
 
         </div>
 
+        <div class = "choose-message">
+            Choose Your Weapon!
+        </div>
+
+        <script src="app.js"></script>
     </body>
 </html>
