more progress made
more progress made

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         <div class = "score-board">
             <div id="user-label" class="badge"> user </div> 
             <div id="computer-label" class="badge"> computer </div> 
-            <span id="user-score"> 0 </span>:
+            <span id="user-score"> 0 </span> 
+            <span> : </span>
             <span id="computer-score"> 0 </span>
         </div>
 
         <div class = "result">
-            <p> Paper beats rock! You win!</p>
+            <p> Paper beats Rock! Rock beats Scissors! Scissors beats Paper!</p>
         </div>
 
         <div class = "choices">
